[metadata]
name = PyMultiprocessTools
version = 1.0
author = Ryan Henrichson
author_email = orcephrye@gmail.com
description = A set of tools for making threading in Python 3 easy.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/orcephrye/PyMultiprocessTools
classifiers =
    Programming Language :: Python :: 3
    License :: GNU GENERAL PUBLIC LICENSE v3
    Operating System :: Linux

[options]
packages = PyThreadingPool
python_requires = >=3.8
